[build-system]
requires = ["setuptools", "wheel", "pygame"]
build-backend = "setuptools.build_meta"

[project]
name = "ledtetris"
version = "0.1.0"
description = "A Python library for LED Tetris"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Yoo", email = "daniel.yoo0523@gmail.com" }]
keywords = ["led", "tetris", "game"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []